Fix image size and overflow of viewport

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,18 @@
+html {
+  position: fixed;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+}
 body {
   background-color:white;
   font-family:"Times New Roman";
+  position: fixed;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
 }
 h1 {
   color:black;
@@ -12,7 +24,7 @@ p {
 }
 img {
   padding:10px;
-  height:33%;
+  height:44%;
   width:33%;
 }
 .quotes {
